--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "dependencies": {
     "gh-pages": "^2.1.1",
     "react": "^16.4.0",
-    "react-dom": "^16.4.0",
+    "react-animate-on-scroll": "^2.1.5",
+    "react-dom": "^16.13.0",
     "react-scripts": "1.1.4",
     "react-typing-animation": "^1.6.2"
   },
   "scripts": {
-   "predeploy": "npm run build",
-  "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
