--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.13.0",
     "react-scripts": "1.1.4",
-    "react-typing-animation": "^1.6.2"
+    "react-typing-animation": "^1.6.2",
+    "waypoints": "^4.0.1"
   },
   "scripts": {
     "predeploy": "npm run build",
