--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "react": "^16.4.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.13.0",
+    "react-ga": "^2.7.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "1.1.4",
     "react-typing-animation": "^1.6.2",
     "waypoints": "^4.0.1"
